# RobotinoLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean-linux.sh  conanfile.txt  generate-linux.sh  generate-win.bat  install-linux.sh  premake5.lua  workspace.lua
cmake/: RobotinoLibConfig.cmake.in
include/: Exception.h  Robotino.h  RobotinoDeps.h  RobotinoLib.h
include/Robotino/: Exception.h  Image.h  Log.h  Robotino.h  RobotinoApi2.h  RobotinoImpl.h
robotinoapi2/linux/include/rec/robotino/api2/: DigitalOutputArray.h  RelayArray.h  all.h  rec_robotino_api2_version.h
robotinoapi2/linux/include/rec/robotino/api2/c/: Com.h
robotinoapi2/linux/include/rec/robotino/rpc/: Client.h  Server.h  rec_robotino_rpc_Client.h  rec_robotino_rpc_Server.h
robotinoapi2/linux/include/rec/robotino/rpc/messages/: charger.h  digital_output_status.h  json_message.h  omnidrive.h  relay_status.h
robotinoapi2/msvc/include/rec/robotino/api2/: ControllerInfo.h  all.h
robotinoapi2/msvc/include/rec/robotino/api2/c/: Com.h
robotinoapi2/msvc/lib/: rec_robotino_api2d.lib
robotinoapi2/windows/include/rec/robotino/api2/: Charger.h  OmniDrive.h  rec_robotino_api2_version.h
robotinoapi2/windows/lib/: rec_robotino_api2.lib
src/: Log.cpp  Robotino.cpp  test.cpp
src/Robotino/: Log.cpp  RobotinoImpl.cpp
